fix : only disable required feature from config

--- a/dev/index.html
+++ b/dev/index.html
@@ -21,9 +21,9 @@
                 byUrl: "http://localhost:8008/fetchUrl",
               },
               features: {
-                background: true,
-                border: true,
-                caption: true,
+                caption: "optional",
+                border: false,
+                background: false,
                 stretched: true,
               },
             },
