fix : rename property 'stretched' to 'stretch'

--- a/dev/index.html
+++ b/dev/index.html
@@ -21,10 +21,10 @@
                 byUrl: "http://localhost:8008/fetchUrl",
               },
               features: {
-                caption: "optional",
+                // caption: false,
                 border: false,
                 background: false,
-                stretched: true,
+                stretch: false,
               },
             },
           },
