Add pre-render hook
Add pre-render hook

--- a/dev/index.html
+++ b/dev/index.html
@@ -35,6 +35,9 @@
           image: {
             class: ImageTool,
             config: {
+              renderPreHook: function (data) {
+                return data;
+              },
               endpoints: {
                 byFile: "http://localhost:8008/uploadFile",
                 byUrl: "http://localhost:8008/fetchUrl",
