fix: show caption when feature is enabled

--- a/dev/index.html
+++ b/dev/index.html
@@ -40,7 +40,7 @@
                 byUrl: "http://localhost:8008/fetchUrl",
               },
               features: {
-                caption: "optional",
+                caption: true,
                 border: false,
                 background: false,
                 stretch: true,
